# CoSimulation

./: Makefile  README.md  run.sh
cosim/hw/: pipeBus.vhd  pipeSink.vhd
cosim/pipe/: bus_hw2sw.txt  bus_sw2hw.txt  sink_hw2sw.txt  sink_sw2hw.txt
cosim/sw/inc/: bus.h  pipeBus.h  pipe_interface.h
cosim/sw/src/: pipeBus.c  pipeSink.c  pipe_interface.c
cosim/sw/utest/: CMakeLists.txt  Makefile.am  configure.ac  run.sh  test_pipeBus.c
hw/: Makefile
hw/tb/: FullAdderTester.vhd
hw/vhdl/: 8bitadder.vhdl  fulladder.vhdl  math_pkg.vhd
hw/xil/: Makefile
hw/xil/Adder/: Adder.gise  Adder.tcl  Adder.xise  FullAdderTester.prj  FullAdderTester.stx  FullAdderTester.xst  Makefile  bitadder.ucf  full_adder.prj  full_adder.stx  full_adder.xst  pipe_bus.prj  pipe_bus.stx  pipe_bus.xst  pipe_sink.prj  pipe_sink.stx  pipe_sink.xst  wave_form.wcfg
hw/xil/Adder/planAhead_run_1/: Adder.ppr
hw/xil/Adder/planAhead_run_1/Adder.data/sim_1/: fileset.xml
hw/xil/Adder/planAhead_run_1/Adder.data/wt/: java_command_handlers.wdf  webtalk_pa.xml
sw/: Makefile.am  automake.sh  configure.ac
sw/inc/: gen_cmd.h  log.h  sanity.h
sw/src/: gen_cmd.c  log.c  pipe.c  sanity.c
xil/Adder/: Adder.gise  Adder.tcl  Adder.xise
xil/Adder/planAhead_run_1/: planAhead.jou
xil/Adder/planAhead_run_1/Adder.data/constrs_1/: fileset.xml
xil/Adder/planAhead_run_1/Adder.data/sources_1/: fileset.xml  ports.xml
